RESOLVED FIXED21838
Fix some forward declares to use 'struct' instead of 'class' to match the type definition
https://bugs.webkit.org/show_bug.cgi?id=21838
Summary Fix some forward declares to use 'struct' instead of 'class' to match the typ...
Darin Fisher (:fishd, Google)
Reported 2008-10-23 13:24:32 PDT
Fix some forward declares to use 'struct' instead of 'class' to match the type definition This avoids compiler warnings in some build configurations.
Attachments
v1 patch (1.52 KB, patch)
2008-10-23 13:25 PDT, Darin Fisher (:fishd, Google)
eric: review+
Darin Fisher (:fishd, Google)
Comment 1 2008-10-23 13:25:32 PDT
Created attachment 24612 [details] v1 patch
Eric Seidel (no email)
Comment 2 2008-10-23 13:29:57 PDT
Comment on attachment 24612 [details] v1 patch LGTM.
Mark Rowe (bdash)
Comment 3 2008-10-23 13:36:05 PDT
Comment on attachment 24612 [details] v1 patch The forward declarations in StyleRareNonInheritedData.h need to be re-sorted.
Darin Fisher (:fishd, Google)
Comment 4 2008-10-23 14:12:23 PDT
bdash, good catch. thanks!
Timothy Hatcher
Comment 5 2008-10-30 22:41:17 PDT
This already landed. Please comment with the revision number and close as fixed next time. Landed in r37824.
Note You need to log in before you can comment on or make changes to this bug.