2008-10-23  Darin Fisher  <darin@chromium.org>

Reviewed by Eric Seidel.

        Fix forward decls to be struct instead of class.
        https://bugs.webkit.org/show_bug.cgi?id=21838

        * rendering/style/StyleRareInheritedData.h:
        * rendering/style/StyleRareNonInheritedData.h:



Canonical link: https://commits.webkit.org/30048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37824 268f45cc-cd09-0410-ab3c-d52691b4dbfc